redaktionelle Aenderungen an gitignore und public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 <p>Bis es hier richtig losgeht, schauen Sie auf die Seite des Projekt-Repos:</p>
 <a href="https://gitlab.com/bgehrke/simpelmed">https://gitlab.com/bgehrke/simpelmed</a>
 <br>
-<p>Allerdings ist auch hier (noch) nichts zu sehen.</p>
+<p>Allerdings ist auch hier (noch) nichts Neues zu sehen.</p>
 Vielen Dank und bis bald!<br>
 <hr>
 <h2>Impressum</h2>
@@ -17,12 +17,17 @@ Berthold Gehrke & Alexandra Rupp GbR
 Klenzestr. 59
 80469 München
 
+Die GbR wird ausschließlich vertreten durch den geschäftsführenden Gesellschafter:
+Dr. Berthold Gehrke
+- Anschrift wie oben -
+- auch verantwortlich für die Inhalte dieser Webseite -
+
+Telefon: +498930791919
 kontakt ~ädd~ simpelmed.de
 
-vertreten durch:
-Berthold Gehrke
-(Anschrift wie oben)
-- auch verantwortlich für die Inhalte dieser Webseite -
+Steuer-/VAT-/Kontonummer auf Anfrage
+
+Stand: 23. August 2023
 </pre>
 </body>
 </html>
